# actionoscope

./: .gitignore  Cargo.toml  README.md
.github/actions/prepare-environment/: action.yaml
.github/workflows/: on.pr.yaml
actionoscope-cli/: Cargo.toml
actionoscope-cli/src/: main.rs
src/: lib.rs
tests/: cli_tests.rs  step_tests.rs  workflow_tests.rs
