[package]
name = "actionoscope"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
ctor = "0.2.9"

[[bin]]
name = "actionoscope"
path = "actionoscope-cli/src/main.rs"

[workspace]
members = [
    "actionoscope-cli",
]

[lib]
name = "actionoscope"
path = "src/lib.rs"
